fix: the margin-right property between prices has been replaced with gap in the special offers section

--- a/src/scss/components/global/_special-offer-card.scss
+++ b/src/scss/components/global/_special-offer-card.scss
@@ -79,11 +79,11 @@
   }
 
   &__prices {
-    margin-bottom: 22px;
-  }
+    @include flex;
 
-  &__new-price {
-    margin-right: 30px;
+    column-gap: 30px;
+    margin-bottom: 22px;
+    row-gap: 10px;
   }
 
   &__inner {
